components/policies/development/kueue/deny-unallowed-annotations/.chainsaw-test/test-in-tenant/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: in-tenant-deny-pipelinerun-with-validation-error
spec:
  description: |
    denies a PipelineRun that has unallowed annotation in a tenant namespace
  concurrent: false
  steps:
  - name: given-pipelineruns-crd-exists
    try:
    - apply:
        file: ../resources/pipelineruns.tekton.dev_customresourcedefinition.yaml
    - assert:
        file: ../chainsaw-assert-pipelineruns-crd.yaml
  - name: ensure-namespace-is-labeled
    try:
    - apply:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: ($namespace)
            labels:
              konflux-ci.dev/type: tenant
  - name: given-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../deny-unallowed-annotations-validatingadmissionpolicy.yaml
    - apply:
        file: ../../deny-unallowed-annotations-validatingadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
    - sleep:
        duration: 1s
  - name: then-pipelinerun-with-unallowed-annotations-is-denied
    try:
    - create:
        file: ../resources/pipelinerun_with_unallowed_annotations.yaml
        expect:
          - check:
              ($error != null): true
              ($error): |-
                  pipelineruns.tekton.dev "pipelinerun-with-validation-error" is forbidden: ValidatingAdmissionPolicy 'deny-unallowed-annotations.kueue.konflux-ci.dev' with binding 'deny-unallowed-annotations.kueue.konflux-ci.dev' denied request: PipelineRun validation failed: one or more unexpected annotations found: my/prefix1-unallowed, my/prefix2-unallowed
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: in-tenant-allow-valid-pipelineruns
spec:
  description: |
    allows a PipelineRun that only have allowed annotations in a tenant namespace
  concurrent: false
  steps:
  - name: given-pipelineruns-crd-exists
    try:
    - apply:
        file: ../resources/pipelineruns.tekton.dev_customresourcedefinition.yaml
    - assert:
        file: ../chainsaw-assert-pipelineruns-crd.yaml
  - name: ensure-namespace-is-labeled
    try:
    - apply:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: ($namespace)
            labels:
              konflux-ci.dev/type: tenant
  - name: given-validatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../deny-unallowed-annotations-validatingadmissionpolicy.yaml
    - apply:
        file: ../../deny-unallowed-annotations-validatingadmissionpolicybinding.yaml
    - assert:
        file: ../chainsaw-assert-policy.yaml
    - sleep:
        duration: 1s
  - name: then-pipelinerun-with-allowed-annotations-is-allowed
    try:
    - create:
        file: ../resources/pipelinerun_with_allowed_annotations.yaml
  - name: then-pipelinerun-without-annotations-is-allowed
    try:
    - create:
        file: ../resources/pipelinerun_without_annotations.yaml
  - name: then-pipelinerun-without-filtered-annotations-is-allowed
    try:
    - create:
        file: ../resources/pipelinerun_without_filtered_annotations.yaml
